<resources>
    <string name="app_name">Dare Me</string>
    <string name="app_name_no_spaces">DareMe</string>
    <string name="no_connection_tap_to_retry">No connection. Tap to retry.</string>
    <string name="update_available">Update available!</string>
    <string name="please_update_the_app_to_continue_using_it">Please update the app to continue using it</string>
    <string name="update">Update</string>
    <string name="are_you_a">ARE YOU A</string>
    <string name="player">Player</string>
    <string name="or_a">OR A</string>
    <string name="watcher">Watcher</string>
    <string name="question_mark">\?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN</string>
    <string name="password_and_confirm_password_dont_match">Password and Confirm Password don\'t match</string>
    <string name="username_too_short">Username is too short</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="email_address_cannot_be_empty">Email address cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="confirm_password_cannot_be_empty">Confirm password cannot be empty</string>
    <string name="please_wait_do_not_close_the_app">Please wait. Do not close the app</string>
    <string name="please_wait">Please wait</string>
    <string name="registering">Registering</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="your_email_is_already_registered_with_a_different_password_would_you_like_to_use_your_old_password_or_change_it_with_the_new_one">Your email is already registered with a different password. Would you like to use your old password or change it with the new one?</string>
    <string name="different_password_found">Different password found!</string>
    <string name="login">Login</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="email_is_already_registered">Email is already registered</string>
    <string name="logging_in">Logging in</string>
    <string name="email_is_not_registered">Email is not registered</string>
    <string name="app_is_not_registered">App is not registered</string>
    <string name="change_it_and_login">Change it and Login</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="my_challenges">My Challenges</string>
    <string name="account">Account</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="prize">Prize:</string>
    <string name="challenges">challenges</string>
    <string name="challenges_you">challenges you</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? REGISTER NOW</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="error_please_try_again_later">Error! Please try again later</string>
    <string name="error_please_try_again">Error! Please try again</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="error_sharing_the_challenge">Error sharing the challenge</string>
    <string name="reject_challenge">Reject challenge</string>
    <string name="rejecting_the_challenge_will_mark_this_challenge_as_failed_this_action_cannot_be_undone_do_you_want_to_proceed">Rejecting the challenge will mark this challenge as failed. This action cannot be undone. Do you want to proceed?</string>
    <string name="followers">followers</string>
    <string name="likes">likes</string>
    <string name="challenge">challenge</string>
    <string name="follower">follower</string>
    <string name="like">like</string>
    <string name="new_version_available">New version available</string>
    <string name="version">Version</string>
    <string name="is_available_current_version_is">is available\nCurrent version is</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="just_now">just now</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="days_ago">days ago</string>
    <string name="challenge_capital_c">Challenge</string>
    <string name="couldnt_load_challenge">Couldn\'t load challenge</string>
    <string name="confirm_challenge_completion">Confirm challenge completion</string>
    <string name="do_you_want_to_confirm_that_the_challenge_is_completed">Do you want to confirm that the challenge is completed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_challenge_failure">Confirm challenge failure</string>
    <string name="do_you_want_to_confirm_that_the_challenge_is_failed">Do you want to confirm that the challenge is failed?</string>
    <string name="challenge_accepted_instructions">You have accepted the challenge. Prove it by uploading a video that shows a proof of that challenge.\n<b><u>P.S:</u></b> Edit your video before uploading. It cannot be edited here yet. You can only review it after choosing it but you cannot edit it.</string>
    <string name="upload_video_proof">Upload video proof</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_needed_in_order_to_choose_video">Permission is needed in order to choose a video</string>
    <string name="ok">OK</string>
    <string name="challenge_accepted">Challenge Accepted</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failed">Upload failed</string>
    <string name="video_is_too_long">Video is too long</string>
    <string name="permission_permanently_denied">Permission permanently denied</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="you_have_been_challenged_by">You have been challenged by:</string>
    <string name="you_havent_been_challenged_by_anyone">You haven\'t been challenged by anyone</string>
    <string name="you_have_challenged">You have challenged:</string>
    <string name="you_havent_challenged_anyone">You haven\'t challenged anyone</string>
    <string name="proof_of_the_challenge">Proof of the challenge</string>
    <string name="no_completed_challenges_yet">No completed challenges yet</string>
    <string name="comments">Comments</string>
    <string name="connecting">Connecting</string>
    <string name="connection_failed">Connection failed</string>
    <string name="who_you_are_challenging_player_s_username">Who you are challenging \n(player\'s username)</string>
    <string name="no_results_found">No results found</string>
    <string name="describe_your_challenge_n_do_not_suggest_harmful_and_violent_challenges_otherwise_your_account_will_be_banned">Describe your challenge \n(Do not suggest harmful and violent challenges otherwise your account will be banned)</string>
    <string name="what_the_player_will_get_when_completing_your_challenge_n_for_example_you_can_give_him_a_shoutout_on_instagram">What the player will get when completing your challenge\n(for example, you can give him a shoutout on Instagram)</string>
    <string name="add_challenge">Add challenge</string>
    <string name="new_challenge">New Challenge</string>
    <string name="challenge_prize_cannot_be_empty">Challenge prize cannot be empty</string>
    <string name="challenge_description_cannot_be_empty">Challenge description cannot be empty</string>
    <string name="player_s_username_cannot_be_empty">Player\'s username cannot be empty</string>
    <string name="username_not_found">Username not found</string>
    <string name="uploading">Uploading</string>
    <string name="help">Help</string>
    <string name="you_can_contact_us_through_the_following">You can contact us through the following:</string>
    <string name="google_forms">Google Forms</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="username_is_not_available">Username is not available</string>
    <string name="username_not_available">Username not available</string>
    <string name="username_cannot_contain_special_characters">Username cannot contain special characters</string>
</resources>
