<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".Activities.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway_bold_italic"
        android:text="@string/are_you_a"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/start_player_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red_500"
        android:fontFamily="@font/raleway_bold_italic"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="15dp"
        android:text="@string/player"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/raleway_bold_italic"
        android:text="@string/or_a"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/start_watcher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue_500"
        android:fontFamily="@font/raleway_bold_italic"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="15dp"
        android:text="@string/watcher"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/raleway_bold_italic"
        android:text="@string/question_mark"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_watcher_button"
        app:layout_constraintStart_toEndOf="@+id/start_watcher_button"
        app:layout_constraintTop_toTopOf="@+id/start_watcher_button" />

</androidx.constraintlayout.widget.ConstraintLayout>